RESOLVED FIXED305488
Crash in `Geolocation::stopUpdating`
https://bugs.webkit.org/show_bug.cgi?id=305488
Summary Crash in `Geolocation::stopUpdating`
Charlie Wolfe
Reported 2026-01-14 10:15:43 PST
...
Attachments
Charlie Wolfe
Comment 1 2026-01-14 10:15:44 PST
Charlie Wolfe
Comment 2 2026-01-14 10:17:14 PST
EWS
Comment 3 2026-01-14 11:00:27 PST
Committed 305589@main (058c5b80803a): <https://commits.webkit.org/305589@main> Reviewed commits have been landed. Closing PR #56575 and removing active labels.
EWS
Comment 4 2026-02-20 13:18:16 PST
Committed 305413.326@safari-7624-branch (ba62f3b3f67e): <https://commits.webkit.org/305413.326@safari-7624-branch> Reviewed commits have been landed. Closing PR #4521 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.