Cherry-pick 058c5b80803a. rdar://170808945

Crash in `Geolocation::stopUpdating`
    https://bugs.webkit.org/show_bug.cgi?id=305488
    rdar://131108186

    Reviewed by Pascoe.

    * Source/WebCore/Modules/geolocation/Geolocation.cpp:
    (WebCore::Geolocation::stopUpdating):

    Canonical link: https://commits.webkit.org/305589@main

Identifier: 305413.326@safari-7624-branch